# image-mcp

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  deploy-local.sh  opencode.json
.github/workflows/: auto-tag.yml  ci.yml  release.yml
docs/manual-tests/: README.md
scripts/http-capture/: create.sh  edit.sh  lib.sh
src/: config.rs  image_api.rs  image_ops.rs  image_store.rs  litellm.rs  main.rs  server.rs
src/tools/: create.rs  edit.rs  image_info.rs  image_resize.rs  list_models.rs  mod.rs
tests/: image-mcp-preview-and-edit-test.md  image-mcp-two-animals-hand-drawing-test.md  image-mcp-two-person-composition-test.md
