[package]
name = "image-mcp"
version = "1.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "fs"] }
reqwest = { version = "0.13", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
jsonc-parser = { version = "0.33", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
dirs = "6.0"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
wiremock = "0.6.5"
